--- a/src/components/MovieListing/MovieListing.scss
+++ b/src/components/MovieListing/MovieListing.scss
@@ -9,9 +9,12 @@
     font-weight: 400;
   }
 }
-
-.movie-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
-  grid-gap: 15px;
+.loader-listing {
+  margin-left: 50%;
 }
+
+// .movie-container {
+//   display: grid;
+//   grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+//   grid-gap: 15px;
+// }
